--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
 <body>
 
-    <h1>Real Time Character Counter</h1>
+    <div class="container">
+        <h2>Real Time Character Counter</h2>
+        <textarea name="" id="textarea" class="textarea" placeholder="Start typing here" maxlength="50"></textarea>
+        <div class="counter-container">
+            <p>Total Characters: <span class="total-count" id="total-count">12</span></p>
+            <p>Remaining Chars: <span class="remaining-count" id="remaining-count">38</span></p>
+        </div>
+
+    </div>
     <script src="app.js"></script>
 </body>
 
