Added function to get user input, count, get remaining characters and display to user

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <div class="container">
         <h2>Real Time Character Counter</h2>
-        <textarea name="" id="textarea" class="textarea" placeholder="Start typing here" maxlength="50"></textarea>
+        <textarea name="" id="textarea" class="textarea" placeholder="Start typing here" maxlength="150"></textarea>
         <div class="counter-container">
-            <p>Total Characters: <span class="total-count" id="total-count">12</span></p>
-            <p>Remaining Chars: <span class="remaining-count" id="remaining-count">38</span></p>
+            <p>Total Characters: <span class="total-count" id="total-count"></span></p>
+            <p>Remaining Chars: <span class="remaining-count" id="remaining-count"></span></p>
         </div>
 
     </div>
